# RCB

./: .gitignore  README.md
RCB-model/: rcb-yo11.py
RCB-model/RCB-1/: README.dataset.txt  README.roboflow.txt  data.yaml
RCB-model/RCB-1/test/labels/: 34684766_36662066_png.rf.0507a19f5a0c68312c289e3e0b61832e.txt  34710302_36688251_png.rf.53f6d569e5e3281df578080c7799b397.txt  34714548_36688070_png.rf.812194b2320a3544a8516205510b19e6.txt  34733217_36666448_png.rf.4ceaf0abcadfb23143811ef786177803.txt  35291508_36663358_png.rf.d158d8363497e0cea765e63d713200eb.txt  35310395_36629064_png.rf.e4a9b9ec2c99236399a2ffb6f233a9f5.txt  35316810_36696254_png.rf.ae3535d81fc553da66a2d65446c1ba56.txt  35330967_36682468_png.rf.7a3fbfdbfed262aafc8a1346ffe27583.txt  35337518_36674158_png.rf.9623aef92e04847356fe440b1bad2c2c.txt  35378995_36609154_png.rf.803e3e279cf261e8e4101e31fad4fc75.txt  35404283_36488575_png.rf.8efac45228b91b4f1be2c145f7a46da3.txt  35415058_36456903_png.rf.36039f8d14845eb9b46fa38a5cc83bbd.txt  36156302_37130193_png.rf.cea4d75cd20f1e2b729b5c7e83fb0d6d.txt  36157103_37128440_png.rf.330f70df00713a6490de126013ceeeed.txt  36159402_37132339_png.rf.f841f4194795d9bde326608014141031.txt  36168033_37134132_png.rf.f888d098710fae0ecf5722fce2d1e369.txt  36192135_37202754_png.rf.3cbe4ec933249ae866062e4ea50f52b9.txt  36204714_37194951_png.rf.8f379c2e2c60b187e681a9f93b8279f5.txt  36205846_37157058_png.rf.612857746c9c20023db095ff7d464bd7.txt  36207181_37195680_png.rf.dbbce51c551b1529bca4c33bfeff1740.txt  36209147_37160010_png.rf.cc1446f60732279cfea61945b1fd1286.txt  36210578_37163454_png.rf.1733b7505f2f7cfa90b606ce3428bbf0.txt  36227945_37103508_png.rf.770de76bd505063768d982eab605b547.txt  36237798_37137958_png.rf.1bdf0758a663a5d7f06573473388a30f.txt  36239253_37098257_png.rf.cf80c294b5fe3b1098c2c4e6912e7760.txt
RCB-model/RCB-1/train/labels/: 34691426_36739373_png.rf.c9d32a5222b238d3dc4ba1206223217b.txt  34711911_36698999_png.rf.b044a06846faa97d0406c285607aedd6.txt  34712778_36689326_png.rf.20df786de688915e7bb9f34fbd2cf84b.txt  34712824_36685665_png.rf.f45122cc40e61735b64c3665413d2b82.txt  34713790_36689279_png.rf.b6773e7dffd5f4becb112c06ffc29db1.txt  34713916_36688266_png.rf.4e4f4666cb47fd6625caf5b4d0509b5a.txt  34714164_36687447_png.rf.2f5fb6fa20e3949a1abad502048b8416.txt  34714481_36687964_png.rf.436cb69b206ef52406759c269f1244c8.txt  34724568_36754708_png.rf.2c01259cd473bc4a87274b3966307a9b.txt  34730539_36663365_png.rf.5267cfc138e2566a8fd02292bb7685ff.txt  34731467_36667689_png.rf.132bb4375dd8fce0d9d6d4c67ca2ffca.txt  34731603_36662703_png.rf.b59cf530c7cc5a7e84ee97c37c87e02e.txt  34732169_36666855_png.rf.17f6514a35867c220bef8e2fc3b70425.txt  34733387_36658356_png.rf.a0ac532ff713993570804b2e5fdcdeec.txt  34734435_36657134_png.rf.516a46f6cd3c73fff276272789753f0d.txt  34735081_36720175_png.rf.f4bd3e256126ce15ae54361aa490ef86.txt  34735377_36713444_png.rf.4e391f3988abbebfc24d5a4b3f1555f4.txt  34735666_36709020_png.rf.e16557364498a3b65270535d58965727.txt  34736137_36709753_png.rf.b71d67d76d0455c79eb3cf76528dc243.txt  34736226_36713000_png.rf.81d1b0ddebd215275635d5bd0e867e11.txt  34736292_36717555_png.rf.f8248e86b79fc0657f264613518c9933.txt  34736314_36717638_png.rf.9edafa7fcea7a46f269bd6b0c1479f63.txt  34740670_36713971_png.rf.bce4c8a78221c86c26ee2b70c072c84c.txt  34740745_36712070_png.rf.30198e79f5919230fc5d089e5856f1da.txt  34740762_36712992_png.rf.f40ee2506e4fb23bfd146f2705fd6642.txt  34740874_36708263_png.rf.6de44be9b159439de51adfe0f26498c8.txt  34743766_36713636_png.rf.630d58fe92eab5c36441a9be882eb653.txt  34746099_36703335_png.rf.b21a980df9e3f1ab571ae26a7d564cfe.txt  34748059_36700855_png.rf.ce461ae8c83749ca3ff466c5d636ca48.txt  35310098_36627899_png.rf.108984c6e352966ad7cf2747c5ee4ae8.txt  35311593_36628120_png.rf.e5b609eccc918fec635f8cf7afc9d142.txt  35315320_36694616_png.rf.d61505ce99dfee1872eb918fe390f245.txt  35316222_36694422_png.rf.0e4743a0c9a91e1d2a29c323e93e7896.txt  35316264_36696121_png.rf.56c9ec63e5a751402acadc1267ef3f2c.txt  35317361_36695564_png.rf.5f4e3435fbd39bf6d8cdbf047626363f.txt  35317534_36666699_png.rf.f9efc3cd02c4c0945f9b92e40a69c0b6.txt  35317825_36668062_png.rf.9fc8bf49caac92ece9594a07e2bcc833.txt  35317828_36667197_png.rf.710d883a21f3e0c6885ba94663fe9989.txt  35318982_36667081_png.rf.361cb1f7e7410bd30bbbad2253b9d686.txt  35319291_36665560_png.rf.ad45f0e54915b26ca057e111ea16c165.txt  (+131 more)
RCB-model/RCB-1/valid/labels/: 34700251_36676470_png.rf.c6ed1af140c631a82b73d620e0a91d5e.txt  34708700_36681184_png.rf.7b81e23fcbf63ff43c5d131f0bf54506.txt  (+52 more)
workspaces/controller_ws/install/: local_setup.sh  setup.sh
workspaces/controller_ws/log/: latest_build
workspaces/controller_ws/src/camera_driver/: CMakeLists.txt  package.xml
workspaces/controller_ws/src/camera_driver/include/camera_driver/: camera_driver_node.hpp
workspaces/controller_ws/src/camera_driver/src/: camera_driver_node.cpp  main.cpp
workspaces/controller_ws/src/image_processor/: CMakeLists.txt  package.xml
workspaces/controller_ws/src/image_processor/include/image_processor/: image_processor_node.hpp
workspaces/controller_ws/src/image_processor/src/: image_processor_node.cpp  main.cpp
workspaces/docker_ws/src/camera/: CMakeLists.txt
workspaces/docker_ws/src/camera/include/: ImageProcessor.hpp
workspaces/docker_ws/src/camera/include/ImageProcessor/: ArucoMarkerProcessor.hpp  ImageTransformationProcessor.hpp  Marker.hpp
workspaces/docker_ws/src/camera/src/: main.cpp
workspaces/docker_ws/src/camera/src/ImageProcessor/: ArucoMarkerProcessor.cpp  ImageProcessor.cpp  ImageTransformationProcessor.cpp  Marker.cpp
workspaces/docker_ws/src/joystick_control/: CMakeLists.txt
workspaces/docker_ws/src/joystick_control/include/joystick_control/: joystick.hpp  joystick_control_node.hpp
workspaces/docker_ws/src/joystick_control/src/: joystick.cpp  main.cpp
workspaces/docker_ws/src/robot_control/: CMakeLists.txt
workspaces/docker_ws/src/robot_control/include/robot_control/: robot_control_node.hpp  state_machine.hpp
workspaces/docker_ws/src/robot_control/src/: main.cpp  state_machine.cpp
(+91 files in other folders)
